// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody euiPageBody--borderRadiusNone testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody panelled also accepts panelProps 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
/>
`;

exports[`EuiPageBody panelled can be set to true 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom number 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:24rem"
/>
`;

exports[`EuiPageBody restrict width can be set to a default 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--restrictWidth-default testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
